# miniaicup2018

./: .gitignore  CMakeLists.txt  package.sh
src/: CornerInflience.cpp  CornerInflience.h  EnemyInfluence.cpp  EnemyInfluence.h  EnemyPredictor.cpp  EnemyPredictor.h  Field.cpp  Field.h  FoodInfluence.cpp  FoodInfluence.h  Influence.h  MovePlanner.cpp  MovePlanner.h  RandomInfluence.cpp  RandomInfluence.h  ScopeTimer.cpp  ScopeTimer.h  SimpleGradient.cpp  SimpleGradient.h  V2d.cpp  V2d.h  VirusInfluence.cpp  VirusInfluence.h  main.cpp
